--- a/QDHXB.cabal
+++ b/QDHXB.cabal
@@ -25,7 +25,7 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      QDHXB
   other-modules:
       Paths_QDHXB
   hs-source-dirs:
@@ -33,6 +33,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , template-haskell
   default-language: Haskell2010
 
 executable QDHXB-exe
@@ -45,6 +46,7 @@ executable QDHXB-exe
   build-depends:
       QDHXB
     , base >=4.7 && <5
+    , template-haskell
   default-language: Haskell2010
 
 test-suite QDHXB-test
@@ -58,4 +60,5 @@ test-suite QDHXB-test
   build-depends:
       QDHXB
     , base >=4.7 && <5
+    , template-haskell
   default-language: Haskell2010
