Refactoring to separate the bootstrap from what will be a common internal representation closer to Haskell data structures.  Also separating out some TH and XML specifics.

--- a/QDHXB.cabal
+++ b/QDHXB.cabal
@@ -26,6 +26,10 @@ source-repository head
 library
   exposed-modules:
       QDHXB
+      QDHXB.Internal
+      QDHXB.Manual
+      QDHXB.TH
+      QDHXB.XMLLight
       Test
   other-modules:
       Paths_QDHXB
