--- a/QDHXB.cabal
+++ b/QDHXB.cabal
@@ -26,7 +26,9 @@ source-repository head
 library
   exposed-modules:
       QDHXB
-      QDHXB.Internal
+      QDHXB.Internal.Generate
+      QDHXB.Internal.Types
+      QDHXB.Internal.XSDQ
       QDHXB.Manual
       QDHXB.TH
       QDHXB.UtilMisc
