Starting options.  Not yet plumbed into the QDHXB monad.
Also convenience re-exports in the top-level QDHXB package.

--- a/QDHXB.cabal
+++ b/QDHXB.cabal
@@ -30,6 +30,7 @@ library
       QDHXB.Internal.Types
       QDHXB.Internal.XSDQ
       QDHXB.Manual
+      QDHXB.Options
       QDHXB.TH
       QDHXB.UtilMisc
       QDHXB.XMLLight
