--- a/QDHXB.cabal
+++ b/QDHXB.cabal
@@ -45,6 +45,7 @@ library
   build-depends:
       base >=4.7 && <5
     , directory
+    , extra
     , template-haskell
     , transformers ==0.5.*
     , xml
@@ -61,6 +62,7 @@ executable QDHXB-exe
       QDHXB
     , base >=4.7 && <5
     , directory
+    , extra
     , template-haskell
     , transformers ==0.5.*
     , xml
@@ -82,6 +84,7 @@ test-suite QDHXB-test
     , TLT >=0.5.0.0
     , base >=4.7 && <5
     , directory
+    , extra
     , template-haskell
     , transformers ==0.5.*
     , xml
