--- a/package.yaml
+++ b/package.yaml
@@ -23,10 +23,11 @@ dependencies:
 - base >= 4.7 && < 5
 - directory
 - extra
+- mtl
 - template-haskell
-- xml
-- transformers >=0.5 && < 0.6
 - time
+- transformers >=0.5 && < 0.6
+- xml
 
 ghc-options:
 - -ddump-splices
