--- a/package.yaml
+++ b/package.yaml
@@ -37,7 +37,7 @@ ghc-options:
 - -Wincomplete-uni-patterns
 - -Wpartial-fields
 - -Wredundant-constraints
-# - -ddump-splices
+- -ddump-splices
 
 library:
   source-dirs: src
