Turn off slice info --- redundant with the debugging options

--- a/package.yaml
+++ b/package.yaml
@@ -37,7 +37,8 @@ ghc-options:
 - -Wincomplete-uni-patterns
 - -Wpartial-fields
 - -Wredundant-constraints
-- -ddump-splices
+
+# - -ddump-splices
 
 library:
   source-dirs: src
