Typo in Github spec

--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
 name:                QDHXB
 version:             0.0.0.1
-github:              "githubuser/QDHXB"
+github:              "jphmrst/QDHXB"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/QDHXB#readme>
+description:         Please see the README on GitHub at <https://github.com/jphmrst/QDHXB#readme>
 
 dependencies:
 - base >= 4.7 && < 5
