Move to more recent GHC

--- a/stack.yaml
+++ b/stack.yaml
@@ -17,8 +17,9 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
+# resolver: ghc-9.6.2
 resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/20/3.yaml
+  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/21/6.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
