--- a/package.yaml
+++ b/package.yaml
@@ -27,7 +27,11 @@ dependencies:
 - template-haskell
 - time
 - transformers >=0.5 && < 0.6
+- symbol
 - xml
+- free          # For DebuglnT
+- resourcet     # For DebuglnT
+- STMonadTrans  # For DebuglnT
 
 ghc-options:
 - -Wall
