--- a/package.yaml
+++ b/package.yaml
@@ -21,17 +21,17 @@ description:         Please see the README on GitHub at <https://github.com/jphm
 
 dependencies:
 - base >= 4.7 && < 5
-- directory
-- extra
-- mtl
-- template-haskell
-- time
+- directory >= 1.3 && < 1.4
+- extra >= 1.7 && < 1.8
+- mtl >= 2.2 && < 2.3
+- template-haskell >= 2.19 && < 2.20
+- time >=1.12 && < 1.13
 - transformers >=0.5 && < 0.6
-- symbol
-- xml
-- free          # For DebuglnT
-- resourcet     # For DebuglnT
-- STMonadTrans  # For DebuglnT
+- symbol >= 0.2 && < 0.3
+- xml >= 1.3 && < 1.4
+- free >= 5.1 && < 5.2          # For DebuglnT
+- resourcet >= 1.2 && < 1.3     # For DebuglnT
+- STMonadTrans >= 0.4 && < 0.5  # For DebuglnT
 
 ghc-options:
 - -Wall
