--- a/package.yaml
+++ b/package.yaml
@@ -32,6 +32,7 @@ dependencies:
 - free >= 5.1 && < 5.2          # For DebuglnT
 - resourcet >= 1.2 && < 1.3     # For DebuglnT
 - STMonadTrans >= 0.4 && < 0.5  # For DebuglnT
+- ansi-terminal >= 0.11.1 && < 0.12
 
 ghc-options:
 - -Wall
