--- a/package.yaml
+++ b/package.yaml
@@ -28,6 +28,7 @@ dependencies:
 - time >=1.12 && < 1.13
 - transformers >=0.5 && < 0.6
 - symbol >= 0.2 && < 0.3
+- split >= 0.2 && < 0.3
 - xml >= 1.3 && < 1.4
 - free >= 5.1 && < 5.2          # For DebuglnT
 - resourcet >= 1.2 && < 1.3     # For DebuglnT
