--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,7 @@ dependencies:
 - resourcet >= 1.2 && < 1.3     # For DebuglnT
 - STMonadTrans >= 0.4 && < 0.5  # For DebuglnT
 - ansi-terminal >= 0.11.1 && < 0.12
+- regex-compat >= 0.95.2.1 && < 0.96
 
 ghc-options:
 - -Wall
